add x-item-preview element

--- a/www/index.html
+++ b/www/index.html
@@ -43,6 +43,11 @@
                 <h1>Welcome to Archive.org</h1>
                 <hr>
                 <h3>It seems like you didn't specify an item to inspect. Here's a few to get you started:</h3>
+                <x-item-preview ident="InformationM"></x-item-preview>
+                <x-item-preview ident="Sony_-_Playstation_commercial_1996"></x-item-preview>
+                <x-item-preview ident="Popeye_Cooking_With_Gags_1954"></x-item-preview>
+                <x-item-preview ident="TheFastandtheFuriousJohnIreland1954goofyrip"></x-item-preview>
+                <x-item-preview ident="westofhotdog"></x-item-preview>
             </div>
             <div id="show_item">
                 <!-- -->
